--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Condiment&display=swap');
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  display: grid;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,26 +11,34 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header{
+  font-family: 'Condiment', cursive;
+  letter-spacing: 4px;
+  font-size: 105px;
+  color: rgb(255, 1, 1);
+  letter-spacing: 10px;
+  margin-bottom: 0px;
 }
 
-.App-link {
-  color: #61dafb;
+.layer_one{
+  grid-column: 1;
+  grid-row: 1;
+  color: rgb(226, 168, 168);
+  margin-left: -4px;
+  grid-column-gap: -10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.layer_two{
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.text_input{
+  font-size: 48px;
+  width: 250px;
+  margin: 0 auto;
+}
+
+.room_submit{
+  font-size: 48px;
 }
