Animate chicken image to move to center

--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,12 @@
 .room_submit{
   font-size: 48px;
 }
+img{
+
+  transform: translateX(840px);
+  opacity: 1;
+  /* visibility: hidden; */
+  display: inline-block;
+  margin-bottom: 80px;
+  
+}
