--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   display: flex;
   flex-direction: space-around;
+  margin: auto 0;
 }
 
 .App-logo {
@@ -43,10 +44,16 @@
   width: 40vw;
   display: flex;
   margin-top: 2%;
-  align-content: flex-end;
+  justify-content: flex-end;
 }
 
 .theater{
+  width: 110vw;
+  margin: 2%;
+  border: wheat 1px solid;
+}
+
+.frame{
   width: 110vw;
   margin: 2%;
   border: wheat 1px solid;
