--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,6 @@
 .chat{
   width: 40vw;
   display: flex;
-  margin-top: 2%;
   justify-content: flex-end;
 }
 
@@ -70,7 +69,8 @@
 }
 
 .frame{
-  width: 110vw;
+  height: 100vh;
+  width: 200vw;
   margin: 2%;
   border: wheat 0px solid;
 }
@@ -124,4 +124,16 @@
   margin-right: -30px;
   transform: rotate(15deg);
   opacity: 0;
+}
+
+.searchbar{
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.search-input{
+  width: 30vw;
+  padding: 10px;
 }
