--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@
 
 .avatar{
   display: flex;
-
+  height: 100px;
 }
 
 .avatarImage{
@@ -113,15 +113,16 @@
 
 .fistImage{
   z-index: -1;
-  width: 50px;
-  margin-left: -30px;
-  transform: rotate(15deg);
+  width: 35px;
+  margin-left: -20px;
+  transform: rotate(45deg);
+  position: relative;
   opacity: 0;
 }
 
 .peaceImage{
-  width: 50px;
-  margin-right: -30px;
+  width: 35px;
+  margin-right: -20px;
   transform: rotate(15deg);
   opacity: 0;
 }
